tests/errors/semantic/non_blocking/RETURN_LIST_ELEMENT.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def f():
    b = [[1,2,3], [4,5,6]]
    c = b[0]
    return c
